--- a/package.json
+++ b/package.json
@@ -3,19 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "node server.js",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-    
+    "start": "NODE_ENV=production node server.js"
   },
   "dependencies": {
-    "cross-env": "^7.0.3",
     "firebase": "^8.0.1",
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-firebase-hooks": "^3.0.5"
+    "react-firebase-hooks": "^3.0.5",
+    "react-firebaseui": "^6.0.0"
   },
   "devDependencies": {
     "eslint": "7.32.0",
