--- a/package.json
+++ b/package.json
@@ -1,22 +1,24 @@
 {
-  "name": "dakshin-sahodaya",
+  "name": "app",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "node server.js",
+    "dev": "next dev",
     "build": "next build",
-    "start": "NODE_ENV=production node server.js"
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
+    "react": "^18",
+    "react-dom": "^18",
     "firebase": "^8.0.1",
-    "next": "11.1.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-firebase-hooks": "^3.0.5",
-    "react-firebaseui": "^6.0.0"
+    "next": "13.5.6",
+    "react-firebase-hooks": "^3.0.5"
+   
+
   },
   "devDependencies": {
-    "eslint": "7.32.0",
-    "eslint-config-next": "11.1.2"
+    "eslint": "^8",
+    "eslint-config-next": "13.5.6"
   }
 }
